cli_error.txt
warning: unused import: `file_id::FileId`
 --> crates\core\src\vfs.rs:6:5
  |
6 | use file_id::FileId;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `deve_core` (lib) generated 1 warning (run `cargo fix --lib -p deve_core` to apply 1 suggestion)
    Checking deve_cli v0.0.1 (E:\gitclone\Deve-Note\apps\cli)
warning: unused import: `tokio::net::TcpListener`
 --> apps\cli\src\server\mod.rs:3:5
  |
3 | use tokio::net::TcpListener;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `DocId`
 --> apps\cli\src\server\ws.rs:9:38
  |
9 | use deve_core::models::{LedgerEntry, DocId};
  |                                      ^^^^^

warning: variable does not need to be mutable
  --> apps\cli\src\server\ws.rs:19:24
   |
19 | async fn handle_socket(mut socket: WebSocket, state: Arc<AppState>) {
   |                        ----^^^^^^
   |                        |
   |                        help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> apps\cli\src\server\ws.rs:30:9
   |
30 |     let mut send_task = tokio::spawn(async move {
   |         ----^^^^^^^^^
   |         |
   |         help: remove this `mut`

error[E0308]: mismatched types
  --> apps\cli\src\server\mod.rs:24:67
   |
24 |     let sync_manager = Arc::new(deve_core::sync::SyncManager::new(ledger_arc.clone(), vault_path.clone()));
   |                                 --------------------------------- ^^^^^^^^^^^^^^^^^^ expected `Arc<Ledger>`, found `Arc<Arc<Ledger>>`
   |                                 |
   |                                 arguments to this function are incorrect
   |
   = note: expected struct `Arc<Ledger>`
              found struct `Arc<Arc<Ledger>>`
note: associated function defined here
  --> E:\gitclone\Deve-Note\crates\core\src\sync.rs:18:12
   |
18 |     pub fn new(ledger: Arc<Ledger>, vault_root: PathBuf) -> Self {
   |            ^^^

error[E0308]: mismatched types
  --> apps\cli\src\server\mod.rs:27:17
   |
27 |         ledger: ledger_arc,
   |                 ^^^^^^^^^^ expected `Arc<Ledger>`, found `Arc<Arc<Ledger>>`
   |
   = note: expected struct `Arc<Ledger>`
              found struct `Arc<Arc<Ledger>>`

warning: unused variable: `path`
  --> apps\cli\src\main.rs:51:31
   |
51 |         Some(Commands::Init { path }) => {
   |                               ^^^^ help: try ignoring the field: `path: _`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0308`.
warning: `deve_cli` (bin "deve_cli") generated 5 warnings
error: could not compile `deve_cli` (bin "deve_cli") due to 2 previous errors; 5 warnings emitted
